# mullvadvpn-app

./: Cargo.toml
android/: settings.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/gradle/: libs.versions.toml
android/lib/daemon-grpc/src/main/kotlin/net/mullvad/mullvadvpn/lib/daemon/grpc/: ManagementService.kt
android/lib/daemon-grpc/src/main/kotlin/net/mullvad/mullvadvpn/lib/daemon/grpc/mapper/: ToDomain.kt
android/lib/talpid/src/main/kotlin/net/mullvad/talpid/: TalpidVpnService.kt
android/src/main/play/: contact-website.txt
android/src/main/play/listings/en-US/: full-description.txt  short-description.txt  title.txt
ios/MullvadRustRuntime/include/: mullvad_rust_runtime.h
ios/MullvadVPN.xcodeproj/: project.pbxproj
mullvad-daemon/src/settings/: mod.rs
mullvad-ios/: Cargo.toml
mullvad-ios/src/: lib.rs
mullvad-ios/src/api_client/: mock.rs  mod.rs
mullvad-jni/src/: lib.rs
mullvad-masque-proxy/: Cargo.toml  old-session-keys  session-keys
mullvad-masque-proxy/examples/: server.rs
mullvad-masque-proxy/src/: fragment.rs  lib.rs
mullvad-masque-proxy/src/client/: mod.rs
mullvad-masque-proxy/src/server/: mod.rs
talpid-wireguard/: Cargo.toml
talpid-wireguard/src/: lib.rs
talpid-wireguard/src/boringtun/: mod.rs
wireguard-go-rs/libwg/: libwg.go
wireguard-go-rs/src/: lib.rs
