[package]
name = "mullvad-masque-proxy"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A limited functionality UDP over HTTP3 proxy"

[dependencies]
quinn = "0.11"
tokio = { workspace = true, features = [ "macros", "io-util" ] }
h3 = { git = "https://github.com/mullvad/h3", rev = "3b7f6ff2b12d6a937fd04e9a6d6c309c4130cca5" }
h3-datagram = { git = "https://github.com/mullvad/h3", rev = "3b7f6ff2b12d6a937fd04e9a6d6c309c4130cca5" }
h3-quinn = { git = "https://github.com/mullvad/h3", rev = "3b7f6ff2b12d6a937fd04e9a6d6c309c4130cca5", features = [ "datagram" ]}
http = "1"
rustls = { version = "0.23" }
rustls-pemfile = "2.1.3"
bytes = "1"

[dev-dependencies]
tokio = { workspace = true, features = [ "macros", "io-util", "rt-multi-thread" ] }

[lints]
workspace = true
